[package]
name = "tdoa-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.2"
itertools = "0.11.0"
rand = "0.8.5"
image = "0.24.7"
colorgrad = "0.6.2"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"

[[bench]]
name = "hyperboloid_solver"
harness = false
